<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.extractor</groupId>
    <artifactId>JsonToJsExtractor</artifactId>
    <version>1.1</version>
    <packaging>jar</packaging>

    <name>JsonToJsExtractor</name>
    <description>JSON to JS Formula Extractor</description>
    <inceptionYear>2025</inceptionYear>
    <organization>
        <name>Pepperi</name>
    </organization>

    <properties>
        <maven.compiler.release>23</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <main.class>com.extractor.Main</main.class>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
        </dependency>
    </dependencies>

    <build>

        <finalName>${project.artifactId}</finalName>

        <plugins>

            <!-- Clean dist/ folder -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.3.2</version>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>dist</directory>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>

            <!-- Compiler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                </configuration>
            </plugin>

            <!-- Uber JAR -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals><goal>shade</goal></goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>${main.class}</mainClass>
                                </transformer>
                            </transformers>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                        <exclude>META-INF/MANIFEST.MF</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Create jre-mini into target/jre-mini -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>create-jre-mini</id>
                        <phase>package</phase>
                        <goals><goal>run</goal></goals>
                        <configuration>
                            <target>
                                <delete dir="target/jre-mini"/>
                                <exec executable="jlink" failonerror="true">
                                    <arg value="--module-path"/>
                                    <arg value="${java.home}/jmods"/>
                                    <arg value="--add-modules"/>
                                    <arg value="java.base,java.desktop"/>
                                    <arg value="--strip-debug"/>
                                    <arg value="--no-header-files"/>
                                    <arg value="--no-man-pages"/>
                                    <arg value="--output"/>
                                    <arg value="target/jre-mini"/>
                                </exec>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Copy shaded JAR to dist/ -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>copy-jar-to-dist</id>
                        <phase>package</phase>
                        <goals><goal>copy-resources</goal></goals>

                        <configuration>
                            <outputDirectory>${project.basedir}/dist</outputDirectory>
                            <resources>
                                <!-- Copy JAR -->
                                <resource>
                                    <directory>${project.build.directory}</directory>
                                    <includes>
                                        <include>${project.artifactId}.jar</include>
                                    </includes>
                                </resource>
                            </resources>
                        </configuration>

                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

    <profiles>

        <!-- WINDOWS PROFILE -->
        <profile>
            <id>windows</id>

            <build>
                <plugins>

                    <!-- Copy artifacts for EXE -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-resources-plugin</artifactId>
                        <version>3.3.1</version>
                        <executions>
                            <execution>
                                <id>copy-win-dist</id>
                                <phase>package</phase>
                                <goals><goal>copy-resources</goal></goals>

                                <configuration>
                                    <outputDirectory>${project.basedir}/dist/win</outputDirectory>
                                    <resources>
                                        <!-- Copy jre-mini -->
                                        <resource>
                                            <directory>${project.build.directory}/jre-mini</directory>
                                            <targetPath>jre-mini</targetPath>
                                            <includes>
                                                <include>**/*</include>
                                            </includes>
                                        </resource>
                                    </resources>
                                </configuration>

                            </execution>
                        </executions>
                    </plugin>

                    <!-- EXE generator -->
                    <plugin>
                        <groupId>com.akathist.maven.plugins.launch4j</groupId>
                        <artifactId>launch4j-maven-plugin</artifactId>
                        <version>2.6.0</version>

                        <executions>
                            <execution>
                                <id>launch4j-exe</id>
                                <phase>package</phase>
                                <goals><goal>launch4j</goal></goals>

                                <configuration>
                                    <dontWrapJar>false</dontWrapJar>
                                    <headerType>gui</headerType>
                                    <outfile>dist/win/JsonToJsExtractor.exe</outfile>
                                    <jar>dist/JsonToJsExtractor.jar</jar>
                                    <icon>src/main/resources/app.ico</icon>

                                    <classPath>
                                        <mainClass>${main.class}</mainClass>
                                    </classPath>

                                    <jre>
                                        <path>jre-mini</path>
                                        <minVersion>17</minVersion>
                                        <requiresJdk>preferJre</requiresJdk>
                                    </jre>

                                    <versionInfo>
                                        <fileVersion>1.1.0.0</fileVersion>
                                        <txtFileVersion>${project.version}</txtFileVersion>
                                        <productVersion>1.1.0.0</productVersion>
                                        <txtProductVersion>${project.version}</txtProductVersion>
                                        <fileDescription>JSON to JS Formula Extractor</fileDescription>
                                        <copyright>© 2025</copyright>
                                        <productName>JsonToJsExtractor</productName>
                                        <companyName>Pepperi/Dmytro Donchenko</companyName>
                                        <internalName>JsonToJsExtractor</internalName>
                                        <originalFilename>JsonToJsExtractor.exe</originalFilename>
                                    </versionInfo>
                                </configuration>

                            </execution>
                        </executions>
                    </plugin>

                </plugins>
            </build>
        </profile>

        <!-- MACOS PROFILE -->
        <profile>
            <id>macos</id>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.panteleyev</groupId>
                        <artifactId>jpackage-maven-plugin</artifactId>
                        <version>1.7.0</version>

                        <executions>
                            <execution>
                                <id>mac-package</id>
                                <phase>package</phase>
                                <goals><goal>jpackage</goal></goals>
                            </execution>
                        </executions>

                        <configuration>
                            <name>${project.artifactId}</name>
                            <appVersion>${project.version}</appVersion>
                            <vendor>Dmytro Donchenko</vendor>

                            <input>${project.build.directory}</input>
                            <mainJar>${project.artifactId}.jar</mainJar>
                            <mainClass>${main.class}</mainClass>

                            <type>APP_IMAGE</type>
                            <destination>dist/mac</destination>
                            <icon>src/main/resources/app.icns</icon>

                            <!-- IMPORTANT -->
                            <runtimeImage>${project.build.directory}/jre-mini</runtimeImage>
                        </configuration>

                    </plugin>
                </plugins>
            </build>

        </profile>

    </profiles>

</project>
